--- a/frontend/src/app/components/login/login.html
+++ b/frontend/src/app/components/login/login.html
@@ -60,6 +60,13 @@
             </div>
           </div>
 
+          <!-- Forgot Password Link -->
+          <div class="flex justify-end mb-4">
+            <a routerLink="/forgot-password" class="text-sm text-red-600 dark:text-red-500 hover:text-red-700 dark:hover:text-red-400 transition-colors duration-200">
+              Forgot password?
+            </a>
+          </div>
+
           <!-- Submit Button -->
           <button
             type="submit"
